# lessweb-commondao

./: .gitignore  pyproject.toml
commondao/: mapper.py
test/e2e/: test_crud.py  test_decimal.py
tests/e2e/: test_crud.py  test_json.py
