[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lessweb-commondao"
version = "2.0.0"
description = 'Mysql service and toolkit for lessweb'
readme = "README.md"
requires-python = ">=3.10"
keywords = ['lessweb', 'mysql']
authors = [
    {name = "qorzj", email = "goodhorsezxj@gmail.com"},
]
license = {text = "Apache 2"}
dependencies = [
    'aiohttp',
    'lessweb',
    'mysql-connector',
    'aiomysql'
]

[project.optional-dependencies]
test = [
    "autopep8",
    "mypy",
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-aiohttp",
    "types-toml",
]

[tool.setuptools.package-data]
"commondao" = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = false
